<layout> 태그 활용, 데이터 바인딩 준비   -gradle에도 세팅

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 android {
     compileSdk 31
 
+    buildFeatures {
+        dataBinding = true
+    }
+
     defaultConfig {
         applicationId "com.Gaon.jin_20211024"
         minSdk 21
